Make grid line width more easily configurable

--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/fieldSeparatorColor"
-        android:paddingTop="1dp"
+        android:paddingTop="@dimen/bingo_grid_line_width"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,15 +36,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field11"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -58,7 +58,7 @@
                 android:id="@+id/field21"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -72,7 +72,7 @@
                 android:id="@+id/field31"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -86,7 +86,7 @@
                 android:id="@+id/field41"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -100,7 +100,7 @@
                 android:id="@+id/field51"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -116,15 +116,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field12"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -138,7 +138,7 @@
                 android:id="@+id/field22"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -152,7 +152,7 @@
                 android:id="@+id/field32"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -166,7 +166,7 @@
                 android:id="@+id/field42"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -180,7 +180,7 @@
                 android:id="@+id/field52"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -196,15 +196,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field13"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -218,7 +218,7 @@
                 android:id="@+id/field23"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -232,7 +232,7 @@
                 android:id="@+id/field33"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/checkedFieldBackgroundColor"
                 android:gravity="center"
@@ -243,7 +243,7 @@
                 android:id="@+id/field43"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -257,7 +257,7 @@
                 android:id="@+id/field53"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -273,15 +273,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field14"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -295,7 +295,7 @@
                 android:id="@+id/field24"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -309,7 +309,7 @@
                 android:id="@+id/field34"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -323,7 +323,7 @@
                 android:id="@+id/field44"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -337,7 +337,7 @@
                 android:id="@+id/field54"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -353,15 +353,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field15"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -375,7 +375,7 @@
                 android:id="@+id/field25"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -389,7 +389,7 @@
                 android:id="@+id/field35"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -403,7 +403,7 @@
                 android:id="@+id/field45"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -417,7 +417,7 @@
                 android:id="@+id/field55"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
