--- a/app/src/main/res/layout-v23/activity_main.xml
+++ b/app/src/main/res/layout-v23/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/fieldSeparatorColor"
-        android:paddingTop="1dp"
+        android:paddingTop="@dimen/bingo_grid_line_width"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,15 +36,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field11"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -59,7 +59,7 @@
                 android:id="@+id/field21"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -74,7 +74,7 @@
                 android:id="@+id/field31"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -89,7 +89,7 @@
                 android:id="@+id/field41"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -104,7 +104,7 @@
                 android:id="@+id/field51"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -121,15 +121,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field12"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -144,7 +144,7 @@
                 android:id="@+id/field22"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -159,7 +159,7 @@
                 android:id="@+id/field32"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -174,7 +174,7 @@
                 android:id="@+id/field42"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -189,7 +189,7 @@
                 android:id="@+id/field52"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -206,15 +206,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field13"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -229,7 +229,7 @@
                 android:id="@+id/field23"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -244,7 +244,7 @@
                 android:id="@+id/field33"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/checkedFieldBackgroundColor"
                 android:gravity="center"
@@ -255,7 +255,7 @@
                 android:id="@+id/field43"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -270,7 +270,7 @@
                 android:id="@+id/field53"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -287,15 +287,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field14"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -310,7 +310,7 @@
                 android:id="@+id/field24"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -325,7 +325,7 @@
                 android:id="@+id/field34"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -340,7 +340,7 @@
                 android:id="@+id/field44"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -355,7 +355,7 @@
                 android:id="@+id/field54"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -372,15 +372,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field15"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -395,7 +395,7 @@
                 android:id="@+id/field25"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -410,7 +410,7 @@
                 android:id="@+id/field35"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -425,7 +425,7 @@
                 android:id="@+id/field45"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -440,7 +440,7 @@
                 android:id="@+id/field55"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
