--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/fieldSeparatorColor"
-        android:paddingTop="1dp"
+        android:paddingTop="@dimen/bingo_grid_line_width"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,15 +35,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field11"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -57,7 +57,7 @@
                 android:id="@+id/field21"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -71,7 +71,7 @@
                 android:id="@+id/field31"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -85,7 +85,7 @@
                 android:id="@+id/field41"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -99,7 +99,7 @@
                 android:id="@+id/field51"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -115,15 +115,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field12"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -137,7 +137,7 @@
                 android:id="@+id/field22"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -151,7 +151,7 @@
                 android:id="@+id/field32"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -165,7 +165,7 @@
                 android:id="@+id/field42"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -179,7 +179,7 @@
                 android:id="@+id/field52"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -195,15 +195,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field13"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -217,7 +217,7 @@
                 android:id="@+id/field23"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -231,7 +231,7 @@
                 android:id="@+id/field33"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/checkedFieldBackgroundColor"
                 android:gravity="center"
@@ -242,7 +242,7 @@
                 android:id="@+id/field43"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -256,7 +256,7 @@
                 android:id="@+id/field53"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -272,15 +272,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field14"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -294,7 +294,7 @@
                 android:id="@+id/field24"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -308,7 +308,7 @@
                 android:id="@+id/field34"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -322,7 +322,7 @@
                 android:id="@+id/field44"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -336,7 +336,7 @@
                 android:id="@+id/field54"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -352,15 +352,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingBottom="1dp"
-            android:paddingRight="1dp"
+            android:paddingBottom="@dimen/bingo_grid_line_width"
+            android:paddingRight="@dimen/bingo_grid_line_width"
             tools:ignore="RtlHardcoded,RtlSymmetry">
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field15"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -374,7 +374,7 @@
                 android:id="@+id/field25"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -388,7 +388,7 @@
                 android:id="@+id/field35"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -402,7 +402,7 @@
                 android:id="@+id/field45"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
@@ -416,7 +416,7 @@
                 android:id="@+id/field55"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="1dp"
+                android:layout_marginLeft="@dimen/bingo_grid_line_width"
                 android:layout_weight="1"
                 android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
