--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,8 @@
             android:hint="@string/prompt_email"
             android:imeOptions="actionNext"
             android:maxLines="1"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:selectAllOnFocus="true" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -35,7 +36,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/prompt_password"
             android:maxLines="1"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:selectAllOnFocus="true" />
 
     </android.support.design.widget.TextInputLayout>
 
