--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -15,6 +15,18 @@
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/ShareButton"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share_button_text"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/GithubButton"
+        android:icon="@drawable/ic_github_mark_light_120px_plus"
+        android:title="@string/github_button_text"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/ExitButton"
         android:icon="@drawable/ic_exit_to_app_white_24dp"
         android:title="@string/exit_button_text"
