--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/SuggestButton"
-        android:icon="@drawable/ic_add_circle_outline_white_24dp"
+        android:icon="@drawable/ic_add_circle_outline"
         android:title="@string/suggest_button_text"
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/RefreshButton"
-        android:icon="@drawable/ic_refresh_white_24dp"
+        android:icon="@drawable/ic_refresh"
         android:title="@string/refresh_button_text"
         android:visible="true"
         app:showAsAction="ifRoom" />
@@ -28,7 +28,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/ExitButton"
-        android:icon="@drawable/ic_exit_to_app_white_24dp"
+        android:icon="@drawable/ic_exit_to_app"
         android:title="@string/exit_button_text"
         android:visible="true"
         app:showAsAction="ifRoom" />
