--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="de.int80.gothbingo.MainActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
+        android:id="@+id/main_activity_toolbar"
         android:layout_width="0dp"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
@@ -27,7 +27,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/main_activity_toolbar"
         app:layout_constraintVertical_bias="0.0">
 
         <TableRow
